@@ -1,3 +1,11 @@
+2008-11-18
+
+  GCC 4.3 introduces a whole bunch of new warnings for ambiguous
+  parentheses and unchecked IO errors.  Applied a patch contributed by
+  Tatu Kilappa that fixes most of these, and fixed the rest
+  myself. [Haeleth]
+
+
 2008-08-23
 
   Fixed some potential buffer overruns; thanks to Ivan Yanikov for the
